--- a/css/cover.css
+++ b/css/cover.css
@@ -41,6 +41,8 @@ body {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
+  background: url(/images/fremantle1_0313-078.jpg) no-repeat top center;
+  background-size: cover;
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
