--- a/css/cover.css
+++ b/css/cover.css
@@ -124,6 +124,15 @@ body {
   font-weight: bold;
 }
 
+.carousel {
+  margin-top: 70px;
+}
+
+.item-image {
+  width: 100%;
+  height: 100%;  
+}
+
 
 /*
  * Footer
@@ -132,52 +141,6 @@ body {
 .mastfoot {
   color: #999; /* IE8 proofing */
   color: rgba(255,255,255,.5);
-}
-
-.cb-slideshow,
-.cb-slideshow:after { 
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0px;
-    left: 0px;
-    z-index: 0; 
-}
-.cb-slideshow:after { 
-    content: '';
-    /*background: transparent url(../images/pattern.png) repeat top left; */
-}
-
-.cb-slideshow li {
-  list-style-type: none;
-}
-
-.cb-slideshow li span { 
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    color: transparent;
-    background-size: cover;
-    background-position: 50% 50%;
-    background-repeat: none;
-    opacity: 0;
-    z-index: 0;
-    /* animation: imageAnimation 42s linear infinite 0s; */
-}
-
-/* Animation for the slideshow images */
-@keyframes imageAnimation { 
-    0% { opacity: 0; }
-    1% { opacity: 1;}
-   3% { opacity: 0 }
-    100% { opacity: 0 }
-}
-
-/* Show at least something when animations not supported */
-.no-cssanimations .cb-slideshow li span{
-	opacity: 1;
 }
 
 @media screen and (max-width: 1140px) { 
