--- a/css/cover.css
+++ b/css/cover.css
@@ -35,7 +35,8 @@ h4 {
 html,
 body {
   height: 100%;
-  background-color: #122D44;
+  background-color: none;
+  background: rgba(18, 45, 68, 1.0);
 }
 body {
   color: #fff;
@@ -120,10 +121,6 @@ body {
   font-weight: bold;
 }
 
-.carousel {
-  padding-top: 6%;
-}
-
 .carousel .item {
   background-repeat: no-repeat;
   background-position: center center;
@@ -173,10 +170,6 @@ body {
 }
 
 /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
   .mastfoot {
     position: fixed;
     bottom: 0;
@@ -186,10 +179,8 @@ body {
     vertical-align: middle;
   }
   /* Handle the widths */
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 100%; 
+  .masthead {
+    border-bottom: solid 3px #fff;
   }
 
 .masthead,
@@ -197,9 +188,48 @@ body {
   .cover-container {
     width: 100%;
     background: rgba(18, 45, 68, 0.9);
-    height: 70px;
+   z-index: 9999;
   }
   
   .mastfoot {
-    height: 6%;
+    border-top: solid 2px #fff;
   }
+  
+ @media only screen and (max-width : 650px) {
+  h3 {
+    font-size: 22px;
+  }  
+  
+  h4 {
+    font-size: 14px;
+  }
+  
+  .masthead {
+    height: 50px;
+  }
+  
+  .masthead-nav > li > a {
+    font-size: 14px;
+    margin-top: 5px;
+  }
+}
+
+ @media only screen and (max-width : 500px) {
+   .masthead-nav {
+     float: none;
+   }
+  
+  .masthead-nav > li + li {
+    margin-left: 0;
+  }
+  
+  .masthead-nav > li > a {
+    margin-top: 2px;
+    font-size: 12px;
+  }
+  
+  .nav>li>a {
+    padding: 0;
+  }
+  
+ }
