--- a/css/cover.css
+++ b/css/cover.css
@@ -128,17 +128,17 @@ body {
   background-size: cover;
    -webkit-transition-property: opacity;
   transition-property: opacity;
-  transition-duration: 10s;
+  transition-duration: 20s;
 }
 
 .carousel.fade {
   opacity: 1;
 }
 .carousel.fade .item {
-  -moz-transition: opacity ease-in-out .7s;
-  -o-transition: opacity ease-in-out .7s;
-  -webkit-transition: opacity ease-in-out .7s;
-  transition: opacity ease-in-out .7s;
+  -moz-transition: opacity ease-in-out 1.3s;
+  -o-transition: opacity ease-in-out 1.3s;
+  -webkit-transition: opacity ease-in-out 1.3s;
+  transition: opacity ease-in-out 1.3s;
   left: 0 !important;
   opacity: 0;
   top:0;
@@ -153,10 +153,10 @@ body {
 }
 .carousel.fade .item.active {
   opacity: 1;
-  -moz-transition: opacity ease-in-out .7s;
-  -o-transition: opacity ease-in-out .7s;
-  -webkit-transition: opacity ease-in-out .7s;
-  transition: opacity ease-in-out .7s;
+  -moz-transition: opacity ease-in-out 1.3s;
+  -o-transition: opacity ease-in-out 1.3s;
+  -webkit-transition: opacity ease-in-out 1.3s;
+  transition: opacity ease-in-out 1.3s;
   z-index:2;
 }
 
